# workmate2-proj

./: .coverage  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  session.vim
src/: reports.py  utils.py
test/: conftest.py
test/integration/: test_utils.py
test/unit/: test_reports.py
